Allow image filenames; specify that some files are not images